fix text vertical align

--- a/src/components/events/event-details.css
+++ b/src/components/events/event-details.css
@@ -42,6 +42,9 @@
   }
 
   &__value {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     overflow: hidden;
     font-size: 11px;
     word-wrap: break-word;
